# libospl-deprecated

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  BUILD.md  CONTRIBUTING.md  Cargo.toml  Doxyfile  IDEAS.md  NORM.md  README.md  cli.c  cross_file.txt  database.sql  meson.build  windows-linux.cross
.github/ISSUE_TEMPLATE/: bug_report.md
build2/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  libospl.so.0  libospl.so.0.0.1  ospl
build2/here.ospl/: database.db
build2/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
build2/meson-logs/: meson-log.txt
build2/ospl@sha/: libospl.so.0.0.1.symbols
build2/subprojects/cwalk/: libcwalk.so.1  libcwalk.so.1.0.0
build2/subprojects/md5/: cli  libmd5.so.0  libmd5.so.0.0.1
build2/subprojects/stockage/: cli  libstockage.so.0  libstockage.so.0.0.1
build2/subprojects/thumbnailer/: cli  libthumbnailer.so.0  libthumbnailer.so.0.0.1
docs/: _config.yml  build.md  index.md  reference.md
docs/_data/: menus.yml
docs/_layouts/: default.html
docs/_sass/: jekyll-theme-cayman.scss  variables.scss
docs/reference/: _template.md  ospl_album_add_photo.md  ospl_album_create.md  ospl_album_delete.md  ospl_album_delete_photo.md  ospl_album_list.md  ospl_album_list_photos.md  ospl_album_move_photo.md  ospl_album_rename.md  ospl_create_library.md  ospl_import_folder.md  ospl_import_folder_in_album.md  ospl_import_photo.md  ospl_import_photo_in_album.md  ospl_import_picture.md  ospl_photo_associated_album.md  ospl_photo_delete.md  ospl_photo_get.md  ospl_photo_list.md
documentation/html/: BUILD_8md.html  CONTRIBUTING_8md.html  IDEAS_8md.html  NORM_8md.html  README_8md.html  annotated.html  annotated_dup.js  classes.html  cli_8c.html  cli_8c.js  cli_8c__incl.map  cli_8c__incl.md5  common_8c.html  common_8c.js  common_8c__incl.map  common_8c__incl.md5  create_8c.html  create_8c.js  create_8c__incl.map  create_8c__incl.md5  dir_000002_000000.html  dir_000002_000003.html  dir_000006_000005.html  dir_000007_000005.html  dir_09e761304027c904456130627fd4dcf5.html  dir_09e761304027c904456130627fd4dcf5.js  dir_1bad7a50440ccdfa65b169e36f80046a.html  dir_1bad7a50440ccdfa65b169e36f80046a.js  dir_1bad7a50440ccdfa65b169e36f80046a_dep.map  dir_1bad7a50440ccdfa65b169e36f80046a_dep.md5  dir_24da922a06ede80fc45304432f689dd8.html  dir_24da922a06ede80fc45304432f689dd8.js  dir_24da922a06ede80fc45304432f689dd8_dep.map  dir_356c6f8a97c5dff08c774cde2821ed37.html  dir_356c6f8a97c5dff08c774cde2821ed37.js  dir_356c6f8a97c5dff08c774cde2821ed37_dep.map  dir_356c6f8a97c5dff08c774cde2821ed37_dep.md5  dir_9a0ef91bf6d0f63195ba4d0c72c8e2f8.html  dir_9a0ef91bf6d0f63195ba4d0c72c8e2f8.js  dir_b73b02d482d1c4a3db20c3d9ad52d395.html  (+75 more)
documentation/latex/: BUILD_8md.tex  IDEAS_8md.tex  NORM_8md.tex  annotated.tex  cli_8c.tex  cli_8c__incl.md5  common_8c.tex  common_8c__incl.md5  create_8c.tex  create_8c__incl.md5  dir_09e761304027c904456130627fd4dcf5.tex  dir_1bad7a50440ccdfa65b169e36f80046a.tex  dir_1bad7a50440ccdfa65b169e36f80046a_dep.md5  dir_24da922a06ede80fc45304432f689dd8.tex  dir_24da922a06ede80fc45304432f689dd8_dep.md5  dir_356c6f8a97c5dff08c774cde2821ed37.tex  dir_356c6f8a97c5dff08c774cde2821ed37_dep.md5  dir_9a0ef91bf6d0f63195ba4d0c72c8e2f8.tex  dir_b73b02d482d1c4a3db20c3d9ad52d395.tex  dir_b73b02d482d1c4a3db20c3d9ad52d395_dep.md5  dir_f167f8d8b0803bf99a2292d55a636308.tex  dir_f167f8d8b0803bf99a2292d55a636308_dep.md5  dir_f8b92b099185c2eecab759fa5fb24630.tex  export_8c.tex  export_8c__incl.md5  files.tex  import_8c.tex  import_8c__incl.md5  main_8c.tex  main_8c__incl.md5  md_BUILD.tex  md_CONTRIBUTING.tex  md_IDEAS.tex  md_NORM.tex  md_README.tex  ospl_8c.tex  ospl_8c__incl.md5  ospl_8h.tex  ospl_8h__dep__incl.md5  ospl__cli_8h.tex  (+13 more)
includes/: ospl.h  ospl_cli.h
scripts/: copy_dlls.sh  create_emptyfiles.sh
src/: library.rs
srcs/: common.c  ospl.c
srcs/action/: albums.c  create.c  export.c  import.c  photo.c  picture.c
srcs/db/: database_albums.c  database_photos.c  database_settings.c
subprojects/libexif/: config.status  configure  libexif.pc  meson.build
subprojects/md5/: main.c  meson.build
subprojects/md5/include/: md5.h
subprojects/md5/src/: wrapper.c
subprojects/stockage/: main.c  meson.build
subprojects/stockage/include/: stockage.h
subprojects/stockage/src/: stockage.c
subprojects/stockage/src/queries/: albums.c  photos.c  settings.c
subprojects/stockage/subprojects/: sqlite3.wrap
subprojects/thumbnailer/: cli.c  main.c  meson.build
subprojects/thumbnailer/include/: epeg.h  magic.h  thumbnailer.h
subprojects/thumbnailer/src/: epeg.c  thumbnailer.c
subprojects/thumbnailer/subprojects/: libjpeg.wrap
subprojects/thumbnailer/subprojects/libexif/: Makefile  libexif-uninstalled.pc  libtool
subprojects/thumbnailer/subprojects/libexif/autom4te.cache/: output.0
subprojects/thumbnailer/subprojects/libexif/contrib/examples/: Makefile
subprojects/thumbnailer/subprojects/libexif/m4m/: Makefile
test_files/: test_10_alb_mov_photo.c  test_10_alb_mov_pic.c  test_10_fail_import_folder.c  test_11_del_photo.c  test_11_del_pic.c  test_11_import_folder_in_album.c  test_12_fail_import_folder_in_album.c  test_12_list_albums.c  test_13_rename_alb.c  test_14_fail_rename_alb.c  test_15_delete_alb.c  test_16_fail_delete_alb.c  test_17_alb_del_photo.c  test_18_fail_alb_del_photo.c  test_19_alb_mov_photo.c  test_1_create_lib.c  test_20_fail_alb_mov_photo.c  test_21_del_photo.c  test_22_fail_del_photo.c  test_23_list_albums.c  test_24_fail_list_albums.c  test_25_32k_files_import.c  test_2_fail_create_lib.c  test_2_import.c  test_3_create_alb.c  test_3_import.c  test_4_fail_import.c  test_4_import_in_album.c  test_5_create_alb.c  test_5_import_folder.c  test_6_fail_create_alb.c  test_6_import_folder_in_album.c  test_7_import_in_album.c  test_7_rename_alb.c  test_8_delete_alb.c  test_8_fail_import_in_album.c  test_9_alb_del_photo.c  test_9_alb_del_pic.c  test_9_import_folder.c
(+107 files in other folders)
